fix(UI): Fix padding for Memo list filter overlay on mobile screens

--- a/app/src/ui/components/MemoListFilter/MemoListFilter.css
+++ b/app/src/ui/components/MemoListFilter/MemoListFilter.css
@@ -227,7 +227,9 @@
 
 .filter-offcanvas {
     padding-top: env(safe-area-inset-top, calc(var(--spacing) * 2)) !important;
-    padding-bottom: calc(env(safe-area-inset-bottom, calc(var(--spacing) * 2)*2)) !important;
+    padding-bottom: calc(
+        env(safe-area-inset-bottom, calc(var(--spacing) * 2) * 2)
+    ) !important;
 
     & > nav {
         @apply w-full flex justify-center;
